[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/LevelHud.gd" type="Script" id=1]
[ext_resource path="res://art/WaterGaugeBase.png" type="Texture" id=2]
[ext_resource path="res://art/WaterGaugeTop.png" type="Texture" id=3]
[ext_resource path="res://art/WaterGaugeWater.png" type="Texture" id=4]
[ext_resource path="res://art/HealthOrbFull.png" type="Texture" id=5]
[ext_resource path="res://art/IndicatorNeedle.png" type="Texture" id=6]
[ext_resource path="res://art/SpellIcons1.png" type="Texture" id=7]
[ext_resource path="res://art/SpellIcons2.png" type="Texture" id=8]
[ext_resource path="res://art/SpellIcons3.png" type="Texture" id=9]
[ext_resource path="res://art/HealthGaugeTop.png" type="Texture" id=10]
[ext_resource path="res://art/HealthGaugeBlood.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CenterContainer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_right = 400.0

[node name="VBoxContainer" type="HBoxContainer" parent="Container"]
margin_top = -132.0
margin_right = 104.0
margin_bottom = -4.0
alignment = 1

[node name="CenterOrganization" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_right = 104.0
margin_bottom = 128.0
alignment = 1

[node name="WaterBar" type="TextureProgress" parent="Container/VBoxContainer/CenterOrganization"]
margin_right = 32.0
margin_bottom = 128.0
value = 78.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 3

[node name="OrbContainer" type="VBoxContainer" parent="Container/VBoxContainer/CenterOrganization"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 128.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Container/VBoxContainer/CenterOrganization/OrbContainer"]
visible = false
margin_top = 12.0
margin_right = 32.0
margin_bottom = 44.0
texture = ExtResource( 5 )

[node name="TextureRect2" type="TextureRect" parent="Container/VBoxContainer/CenterOrganization/OrbContainer"]
margin_top = 60.0
margin_right = 32.0
margin_bottom = 92.0
texture = ExtResource( 5 )

[node name="CompassPivot" type="Position2D" parent="Container/VBoxContainer/CenterOrganization/OrbContainer/TextureRect2"]
position = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="Container/VBoxContainer/CenterOrganization/OrbContainer/TextureRect2/CompassPivot"]
position = Vector2( 8, 0 )
rotation = 1.5708
texture = ExtResource( 6 )

[node name="TextureRect3" type="TextureRect" parent="Container/VBoxContainer/CenterOrganization/OrbContainer"]
margin_top = 96.0
margin_right = 32.0
margin_bottom = 128.0
texture = ExtResource( 5 )

[node name="SpellIcons" type="AnimatedSprite" parent="Container/VBoxContainer/CenterOrganization/OrbContainer/TextureRect3"]
position = Vector2( 16, 16 )
frames = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="Container/VBoxContainer/CenterOrganization"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 128.0
value = 78.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
fill_mode = 3

[node name="Tween" type="Tween" parent="."]

